--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .nav{
 
 
-  text-shadow: 2px 2px 0 rgba(255,40,192,1), 2px -2px 0 rgba(255,40,192,1), -2px 2px 0 rgba(255,40,192,1), -2px -2px 0 rgba(255,40,192,1), 2px 0px 0 rgba(255,40,192,1), 0px 2px 0 rgba(255,40,192,1), -2px 0px 0 rgba(255,40,192,1), 0px -2px 0 rgba(255,40,192,1);
+  text-shadow: 2px 2px 0 white, 2px -2px 0 rgba(241, 126, 184,1), -2px 2px 0 rgba(241, 126, 184,1), -2px -2px 0 rgba(241, 126, 184,1), 2px 0px 0 rgba(241, 126, 184,1), 0px 2px 0 rgba(241, 126, 184,1), -2px 0px 0 rgba(241, 126, 184,1), 0px -2px 0 rgba(241, 126, 184,1);
 }
 
 
@@ -53,7 +53,8 @@
   }
 
   .sun{
-    /* z-index: 1; */
+    /* z-index: ; */
+
     -webkit-box-shadow: 0px 0px 138px 45px rgba(0,0,0,1);
     -moz-box-shadow: 0px 0px 138px 45px rgba(0,0,0,1);
     box-shadow: 0px 0px 38px 46px rgba(214,31,103,1);
