--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,12 @@
   font-family: 'Bruno Ace SC', cursive;
 }
 
+.costomFont2{
+  /* font-family: 'Bruno Ace SC', cursive; */
+font-family: 'Abril Fatface', cursive;
+
+}
+
 .nav{
 
 
