--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .costomFont2{
   /* font-family: 'Bruno Ace SC', cursive; */
-font-family: 'Abril Fatface', cursive;
+font-family: 'Abril Fatface',sans-serif;
 
 }
 
